Open new/split windows/panes using path of current pane

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,9 +8,10 @@ set -g prefix C-space
 bind R source-file ~/.tmux.conf \; display-message "Config reloaded."
 
 # Open new/split windows/panes with the path of the current pane.
-bind | split-window -h
-bind \ split-window -h
-bind - split-window -v
+bind c new-window      -c '#{pane_current_path}'
+bind | split-window -h -c '#{pane_current_path}'
+bind \ split-window -h -c '#{pane_current_path}'
+bind - split-window -v -c '#{pane_current_path}'
 
 # Vi keybindings for pane navigation.
 bind h select-pane -L
