Add bindings to open new/split windows/panes with default (home) path

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,9 +9,13 @@ bind R source-file ~/.tmux.conf \; display-message "Config reloaded."
 
 # Open new/split windows/panes with the path of the current pane.
 bind c new-window      -c '#{pane_current_path}'
-bind | split-window -h -c '#{pane_current_path}'
 bind \ split-window -h -c '#{pane_current_path}'
 bind - split-window -v -c '#{pane_current_path}'
+
+# Open new/split windows/panes with default (home) path.
+bind C new-window
+bind | split-window -h
+bind _ split-window -v
 
 # Vi keybindings for pane navigation.
 bind h select-pane -L
