--- a/.tmux.conf
+++ b/.tmux.conf
@@ -82,7 +82,7 @@ set -g pane-active-border-style bg=default,fg=blue
 setw -g window-status-format " #I:#W "
 setw -g window-status-current-format " #I:#W "
 setw -g window-status-style bg=default,fg=white
-setw -g window-status-current-style bg="#3e3e3e",fg="#ebdbb2"
+setw -g window-status-current-style bg="#928374",fg="#000000"
 set -g window-status-bell-style bg=red,fg="#ffffff"
 
 # Message (and command prompt) colors.
