Set low escape-time value

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -52,6 +52,9 @@ set -ga terminal-overrides ",st-256color:Tc"
 # Use vi keybindings.
 setw -g mode-keys vi
 
+# Set low escape-time value.
+set-option -sg escape-time 10
+
 # Automatically renumber windows on closing a pane.
 set -g renumber-windows on
 
