--- a/.config/ncmpcpp/config
+++ b/.config/ncmpcpp/config
@@ -30,7 +30,7 @@ ncmpcpp_directory = ~/.config/ncmpcpp
 #
 ## Needed for tag editor and file operations to work.
 ##
-mpd_music_dir = /mnt/floyd/beets
+mpd_music_dir = /mnt/floyd/music
 #
 #mpd_crossfade_time = 5
 #
