--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -9,7 +9,7 @@ bind R source-file ~/.tmux.conf \; display-message "Config reloaded."
 
 # Open new/split windows/panes with the path of the current pane.
 bind c new-window      -c '#{pane_current_path}'
-bind \ split-window -h -c '#{pane_current_path}'
+bind \\ split-window -h -c '#{pane_current_path}'
 bind - split-window -v -c '#{pane_current_path}'
 
 # Open new/split windows/panes with default (home) path.
