Install git lfs

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -22,3 +22,8 @@
 	prompt = false
 [pull]
 	ff = only
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
