Switch to yt-dlp, comment out old stuff

--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -1,5 +1,6 @@
-#keep-open
-#loop-file=inf
-#pause
-ytdl-format="(bestvideo+bestaudio/best)[protocol!=http_dash_segments]"
+# keep-open
+# loop-file=inf
+# pause
+# ytdl-format="(bestvideo+bestaudio/best)[protocol!=http_dash_segments]"
 x11-netwm=yes
+script-opts=ytdl_hook-ytdl_path=/usr/bin/yt-dlp
