Change dark background to standard gruvbox hard: #000000 -> #1d2021

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -85,7 +85,7 @@ set -g pane-active-border-style bg=default,fg=blue
 setw -g window-status-format " #I:#W "
 setw -g window-status-current-format " #I:#W "
 setw -g window-status-style bg=default,fg=white
-setw -g window-status-current-style bg="#928374",fg="#000000"
+setw -g window-status-current-style bg="#928374",fg="#1d2021"
 set -g window-status-bell-style bg=red,fg="#ffffff"
 
 # Message (and command prompt) colors.
