--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -1,5 +1,5 @@
-# keep-open
-# loop-file=inf
+keep-open
+loop-file=inf
 # pause
 # ytdl-format="(bestvideo+bestaudio/best)[protocol!=http_dash_segments]"
 x11-netwm=yes
