--- a/pacman/etc/pacman.conf
+++ b/pacman/etc/pacman.conf
@@ -31,9 +31,10 @@ Architecture = auto
 # Misc options
 #UseSyslog
 Color
-TotalDownload
+#NoProgressBar
 CheckSpace
 VerbosePkgLists
+#ParallelDownloads = 5
 ILoveCandy
 
 # By default, pacman accepts packages signed by keys that its local keyring
@@ -69,19 +70,16 @@ LocalFileSigLevel = Optional
 # repo name header and Include lines. You can add preferred servers immediately
 # after the header, and they will be used before the default mirrors.
 
-#[testing]
+#[core-testing]
 #Include = /etc/pacman.d/mirrorlist
 
 [core]
 Include = /etc/pacman.d/mirrorlist
 
-[extra]
-Include = /etc/pacman.d/mirrorlist
-
-#[community-testing]
+#[extra-testing]
 #Include = /etc/pacman.d/mirrorlist
 
-[community]
+[extra]
 Include = /etc/pacman.d/mirrorlist
 
 # If you want to run 32 bit applications on your x86_64 system,
@@ -90,8 +88,8 @@ Include = /etc/pacman.d/mirrorlist
 #[multilib-testing]
 #Include = /etc/pacman.d/mirrorlist
 
-#[multilib]
-#Include = /etc/pacman.d/mirrorlist
+[multilib]
+Include = /etc/pacman.d/mirrorlist
 
 # An example of a custom package repository.  See the pacman manpage for
 # tips on creating your own repositories.
